Bug 95795 - KDE: save document dialog has swapped buttons
Summary: KDE: save document dialog has swapped buttons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-13 12:51 UTC by Miklos Vajna
Modified: 2016-10-25 19:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Good / old output. (36.61 KB, image/png)
2015-11-13 12:51 UTC, Miklos Vajna
Details
Bad / new output. (36.59 KB, image/png)
2015-11-13 12:51 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-11-13 12:51:08 UTC
Latest master has the buttons on the document save dialog swapped, so if you create e.g. a new Writer doc, type in some characters and press ^W, then "right arrow, then Enter" no longer means "don't save".

Bibisect says the range is a148fe149c7af1995fd2aaab0a6e52242509b993..41d90d6c7c41df781ecaf7745872f20abd7e52a9, likely 6c80a8fe89fadf9a2c7260a09c037a09462f53d1.
Comment 1 Miklos Vajna 2015-11-13 12:51:37 UTC
Created attachment 120520 [details]
Good / old output.
Comment 2 Miklos Vajna 2015-11-13 12:51:54 UTC
Created attachment 120521 [details]
Bad / new output.
Comment 3 Miklos Vajna 2015-11-13 13:09:33 UTC
is_kde5_desktop() in vcl returns true if version is not 5, that's how kde4 gets detected as kde5.
Comment 4 Commit Notification 2015-11-13 13:25:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f6ecf15644b641f729c24822fcb6bb29617ef57

tdf#95795 vcl: fix KDE5 desktop detection

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.