tdf#95795 vcl: fix KDE5 desktop detection

Regression from commit 6c80a8fe89fadf9a2c7260a09c037a09462f53d1 (new
loplugin: oncevar, 2015-11-06), KDE4 was detected as KDE5.

Change-Id: If4a7a074052a31c7505f53c03a36a0975d71b3a7